--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+html, body {
+  height: 100%;
+}
+
 body {
-    margin: 0;
-    padding: 0;
-  }
-  
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  display: flex;
+  height: 100%;
+  min-height: 100%;
+}
